--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,12 @@ header{
 header.container{
     padding: 30px 20%;
 }
-header .logo h2{
+header .logo img{
     color: #304ac9;
     cursor: pointer;
     font-size: 30px;
 }
-header .logo h2:hover{
+header .logo img:hover{
     color: rgb(120, 120, 120);
     cursor: pointer;
     padding: 0 5px;
@@ -122,24 +122,190 @@ section.box-captura .bar-top{
 
 section.content{
     padding: 0 12%;
-    height: 300px;
-    background-color: yellow;
+    margin-bottom: 50px;
+    background-color: white;
+    margin-top: 30px;
     
 }
 div.post{
     height: 100%;
-    background-color: green;
+    background-color: white;
     width: 80%;
+}
+.article-box {
+	display: inline-block;
+	width: 31%;
+	padding: 0 1%;
+	text-align: left;
+}
+
+.article-box img {
+	width: 100%;
+	border-radius: 5px;
+	margin-bottom: 10px;
+}
+
+.article-box h4 {
+	font-size: 24px;
+	margin-bottom: 15px;
+}
+
+.article-box h4 a {
+	text-decoration: none;
+	color: #666;
+}
+
+.article-date {
+	font-size: 12px;
+	margin-bottom: 15px;
+}
+
+.article-resume {
+	font-size: 14px;
+	margin-bottom: 20px;
+}
+
+.article-btn {
+	background-color: #3381f3;
+	border-color: #3381f3;
+	color: #FFF;
+}
+
+.article-btn:hover {
+	background-color: #FFF;
+	color: #3381f3;
 }
 div.sidebar{
     height: 100%;
     background-color: purple;
     width: 20%;
 }
+.light-btn {
+	background-color: #FFF;
+	border: 2px solid #FFF;
+	color: #666;
+	font-weight: bold;
+	text-transform: uppercase;
+	padding: 5px 10px;
+	text-decoration: none;
+	border-radius: 5px;
+	transition: 0.5s;
+}
+.article-btn {
+	background-color: #3381f3;
+	border-color: #3381f3;
+	color: #FFF;
+}
 
+.article-btn:hover {
+	background-color: #FFF;
+	color: #3381f3;
+}
+
+
+.light-btn:hover {
+	background-color: transparent;
+	color: #FFF;
+}
 /* Footer */
 
-footer{
-    height: 180px;
-    background-color: gray;
+
+footer {
+	background-color: #666;
+	padding: 5em 0;
+	padding-bottom: 40px;
+	border-top: 5px solid #3381f3;
+    font-size: 15px;
+}
+
+footer h2, footer p, footer a, footer span {
+	color: #D1D1D1;
+}
+
+footer h2 {
+	font-weight: 400;
+}
+
+footer a {
+	text-decoration: none;
+}
+
+footer ul {
+	padding: 0;
+}
+
+footer li {
+	list-style: none;
+}
+
+.footer-box {
+	width: 31%;
+	padding: 1%;
+	float: left;
+}
+
+footer .wrapper:after {
+	clear: both;
+	content: "";
+	display: block;
+}
+
+.company-footer {
+	width: 80%;
+}
+
+.company-footer h2 {
+	margin-top: 20px;
+}
+
+.company-footer h2, .company-footer p {
+	margin-bottom: 15px;
+}
+
+.footer-list li {
+	margin-bottom: 10px;
+}
+
+.footer-list a {
+	transition: 0.5s;
+}
+
+.footer-list a:hover {
+	color: #FFF;
+}
+
+.footer-list li:after {
+	clear: both;
+	content: "";
+	display: block;
+}
+
+.articles-footer {
+	width: 80%;
+}
+
+.footer-list.footer-article-list span {
+	display: block;
+	float: none;
+}
+
+.fab {
+	font-size: 30px;
+	margin-right: 10px;
+	float: left;
+}
+
+.footer-list li span {
+	float: left;
+	height: 15px;
+	line-height: 30px;
+}
+
+.footer-bottom {
+	border-top: 1px solid #B2B2B2;
+}
+
+.footer-bottom p {
+	font-weight: 600;
+	margin-top: 40px;
 }
