--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,127 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-header {
-    grid-area: cabecalho;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: baseline;
-    align-content: center;
-}
-
-nav {
-    grid-area: navegacao;
-}
-
-main {
-    grid-area: conteudo;
-}
-
-footer {
-    grid-area: rodape;
-}
-
-body {
-    display: grid;
-    min-height: 100vh;
-    grid-template-columns: 1fr 300px;
-    grid-template-rows: 100px 1fr 100px;
-    grid-template-areas: 'cabecalho cabecalho' 'conteudo navegacao' 'rodape rodape';
-}
-
-@media(max-width: 700px) {
-    body {
-        grid-template-columns: 1fr;
-        grid-template-rows: 80px 1fr 100px;
-        grid-template-areas: 'navegacao' 'conteudo' 'rodape';
-    }
-    header {
-        display: none;
-    }
-}
-
-nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
-    align-content: flex-start;
-    list-style-type: none;
-}
-
-nav ul li {
-    margin-left: 15px;
-}
+            @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;600;700&display=swap');
+            * {
+                padding: 0;
+                margin: 0;
+                font-family: 'Open Sans', serif;
+            }
+            
+            header {
+                grid-area: cabecalho;
+            }
+            
+            nav {
+                grid-area: navegacao;
+            }
+            
+            main {
+                grid-area: conteudo;
+            }
+            
+            footer {
+                grid-area: rodape;
+            }
+            
+            body {
+                display: grid;
+                min-height: 100vh;
+                grid-template-columns: 1fr 300px;
+                grid-template-rows: 150px 1fr 100px;
+                grid-template-areas: 'cabecalho cabecalho' 'conteudo navegacao' 'rodape rodape';
+            }
+            
+            @media(max-width: 700px) {
+                body {
+                    grid-template-columns: 1fr;
+                    grid-template-rows: 80px 1fr 100px;
+                    grid-template-areas: 'navegacao' 'conteudo' 'rodape';
+                }
+                header {
+                    display: none;
+                }
+            }
+            
+            header {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                align-items: flex-end;
+                align-content: center;
+                padding: 16px 1%;
+                border-bottom: 5px solid #3381f3;
+            }
+            
+            nav ul {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: baseline;
+                align-content: flex-start;
+                list-style-type: none;
+                padding-right: 30px;
+            }
+            
+            nav ul li {
+                margin-left: 15px;
+            }
+            
+            header .logo img {
+                color: #304ac9;
+                cursor: pointer;
+                font-size: 30px;
+                
+            }
+          
+            header .logo img:hover {
+                color: rgb(120, 120, 120);
+                cursor: pointer;
+                padding: 0 5px;
+                -webkit-box-shadow: 10px 10px 5px 0px rgba(2, 100, 185, 1);
+                -moz-box-shadow: 10px 10px 5px 0px rgba(2, 100, 185, 1);
+                box-shadow: 10px 10px 5px 0px rgba(2, 100, 185, 1);
+                transform: scale(1.09, 1.09);
+                transition: 0.5s;
+                border-radius: 4px;
+            }
+            
+            header nav ul li input[type=text] {
+                width: 100px;
+                border-radius: 8px;
+                border: 0.5px solid rgb(120, 120, 120);
+                margin-right: 2px;
+            }
+            
+            header nav ul li input[type=text]:focus {
+                outline: 0;
+                border: 0.5px solid #1a4a7a;
+                width: 150px;
+            }
+            
+            header nav ul li:not(.not) {
+                cursor: pointer;
+                font-size: 13px;
+            }
+            
+            header nav ul li:not(.not):hover {
+                background-color: #3576b8ad;
+                -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
+                -moz-box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
+                box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
+            }
+            
+            header nav ul li i:hover {
+                background-color: #3576b8ad;
+                color: white;
+                border: 0.5px solid #1a4a7a;
+                -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
+                -moz-box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
+                box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
+            }
+            
+            header nav ul li a {
+                text-decoration: none;
+                color: rgb(120, 120, 120);
+                margin-right: 10px;
+            }
+            
