pagina de requisitos de programaçao completa

--- a/css/style-texto.css
+++ b/css/style-texto.css
@@ -1,18 +1,56 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-main{
+main {
     font-family: 'Inter', sans-serif;
 }
-.titulo{
-    
+
+.autor {
+    font-size: 12px;
+}
+
+.data {
+    font-size: 12px;
+    margin-bottom: 15px;
+}
+
+.titulo {
     color: rgb(55, 0, 255);
-    font-size: 60px;
+    font-size: 46px;
     font-weight: 800;
     text-align: center;
+    margin-bottom: 1.5rem;
+    line-height: 110%;
 }
-.text{
 
-    font-size: 20px;
+.subtitulo {
+    font-size: 25px;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    line-height: 110%;
+}
+
+.paragrafo {
+    font-size: 18px;
     text-align: justify;
-    font-weight: 300;
+    font-weight: 400;
+    letter-spacing: .3px;
+    margin-bottom: 8px;
+}
+
+.imagem {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.imagem img {
+    display: block;
+    height: 30%;
+}
+
+.referencias ul {
+    text-align: justify;
+    font-size: 14px;
 }
