--- a/css/style-texto.css
+++ b/css/style-texto.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;600;700&display=swap');
 main {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Noto Sans Mono', monospace;
 }
 
 .autor {
@@ -19,6 +21,7 @@ main {
     text-align: center;
     margin-bottom: 1.5rem;
     line-height: 110%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .subtitulo {
@@ -27,6 +30,7 @@ main {
     text-align: center;
     margin-bottom: 1.5rem;
     line-height: 110%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .paragrafo {
@@ -35,6 +39,7 @@ main {
     font-weight: 400;
     letter-spacing: .3px;
     margin-bottom: 8px;
+    font-family: 'Noto Sans Mono', monospace;
 }
 
 .imagem {
@@ -45,12 +50,27 @@ main {
     align-items: center;
 }
 
-.imagem img {
+.imagem  img {
     display: block;
-    height: 30%;
+    width: 45%;
 }
 
+.exemplo {
+    border: 5px ridge black;
+    background-color: rgba(0, 0, 0, 0.900);
+    font-family: monospace, sans-serif;
+    color: rgb(0, 255, 0);
+    white-space: pre;
+}
+ul li {
+    font-family: 'Noto Sans Mono', monospace;
+    padding-bottom: 5px;
+}
 .referencias ul {
     text-align: justify;
     font-size: 14px;
+}
+.referencias ul li {
+    font-family: 'Noto Sans Mono', monospace;
+    padding-bottom: 5px;
 }
