--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
     border-bottom: 5px solid #3381f3;
 }
 
-nav ul {
+.painel-navegacao {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -31,7 +31,7 @@ nav ul {
     padding-right: 30px;
 }
 
-nav ul li {
+.painel-navegacao li {
     margin-left: 15px;
     font-size: 30px;
 }
@@ -54,32 +54,32 @@ header .logo img:hover {
     border-radius: 4px;
 }
 
-header nav ul li input[type=text] {
+.painel-navegacao li input[type=text] {
     width: 100px;
     border-radius: 8px;
     border: 0.5px solid rgb(120, 120, 120);
     margin-right: 2px;
 }
 
-header nav ul li input[type=text]:focus {
+.painel-navegacao li input[type=text]:focus {
     outline: 0;
     border: 0.5px solid #1a4a7a;
     width: 150px;
 }
 
-header nav ul li:not(.not) {
+.painel-navegacao li:not(.not) {
     cursor: pointer;
     font-size: 13px;
 }
 
-header nav ul li:not(.not):hover {
+.painel-navegacao li:not(.not):hover {
     background-color: #3576b8ad;
     -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
     -moz-box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
     box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
 }
 
-header nav ul li i:hover {
+.painel-navegacao li i:hover {
     background-color: #3576b8ad;
     color: white;
     border: 0.5px solid #1a4a7a;
@@ -88,7 +88,7 @@ header nav ul li i:hover {
     box-shadow: 1px 1px 2px 0px rgba(0, 3, 60, 1);
 }
 
-header nav ul li a {
+.painel-navegacao li a {
     text-decoration: none;
     color: rgb(120, 120, 120);
     margin-right: 10px;
